--- a/toolkit/components/aboutmemory/content/aboutMemory.css
+++ b/toolkit/components/aboutmemory/content/aboutMemory.css
@@ -62,11 +62,22 @@ div.non-verbose pre.entries {
 h1 {
   padding: 0;
   margin: 0;
+  display: inline;  
 }
 
 h2 {
   background: #ddd;
   padding-left: .1em;
+}
+
+h3 {
+  display: inline;  
+}
+
+a.upDownArrow {
+  font-size: 130%;
+  text-decoration: none;
+  -moz-user-select: none;  
 }
 
 .accuracyWarning {
