--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -14,6 +14,9 @@
   display: block;
   unicode-bidi: inherit;
   text-overflow: inherit;
+  overflow: inherit;
+  padding: inherit;
+  position: inherit;
   height: 100%;   
 }
 
