--- a/browser/themes/osx/devtools/debugger.css
+++ b/browser/themes/osx/devtools/debugger.css
@@ -26,8 +26,11 @@
   -moz-border-end: 1px solid #222426; 
 }
 
+#sources-toolbar .devtools-toolbarbutton {
+  min-width: 32px;
+}
+
 #pretty-print {
-  min-width: 0;
   font-weight: bold;
 }
 
