--- a/browser/devtools/shared/widgets/widgets.css
+++ b/browser/devtools/shared/widgets/widgets.css
@@ -24,6 +24,11 @@
   -moz-user-focus: normal;
 }
 
+.side-menu-widget-group-checkbox .checkbox-label-box,
+.side-menu-widget-item-checkbox .checkbox-label-box {
+  display: none; 
+}
+
 
 
 .variables-view-container {
