--- a/layout/reftests/forms/input/color/reference-style.css
+++ b/layout/reftests/forms/input/color/reference-style.css
@@ -1,21 +1,9 @@
-button.input-color {
-  
-
- 
-  -moz-appearance: textfield;
-  padding: 1px 0px 1px 0px;
-}
-button.input-color::-moz-focus-inner {
- padding: 0;
- border: 0;
-}
-
 div.input-color-swatch {
   
   width: 100%;
   height: 100%;
-  min-width: 50px;
-  min-height: 1em;
+  min-width: 40px;
+  min-height: 15px;
   display: block;
   background-color:#000000; 
 }
