--- a/browser/themes/shared/devtools/dark-theme.css
+++ b/browser/themes/shared/devtools/dark-theme.css
@@ -63,7 +63,8 @@
 
 .theme-comment,
 .cm-s-mozilla .cm-meta,
-.cm-s-mozilla .cm-hr { 
+.cm-s-mozilla .cm-hr,
+.cm-s-mozilla .cm-comment { 
   color: #5c6773;
 }
 
@@ -79,8 +80,7 @@
 
 .theme-fg-color1,
 .cm-s-mozilla .cm-variable-2,
-.cm-s-mozilla .cm-quote,
-.cm-s-mozilla .CodeMirror-matchingbracket { 
+.cm-s-mozilla .cm-quote { 
   color: #5c9966;
 }
 
@@ -101,8 +101,7 @@
   color: #a673bf;
 }
 
-.theme-fg-color4,
-.cm-s-mozilla .cm-comment { 
+.theme-fg-color4 { 
   color: #6270b2;
 }
 
@@ -119,7 +118,6 @@
 }
 
 .theme-fg-color7,
-.cm-s-mozilla .CodeMirror-nonmatchingbracket,
 .cm-s-mozilla .cm-string-2,
 .cm-s-mozilla .cm-error { 
   color: #bf5656;
@@ -160,12 +158,20 @@
   background: rgb(185, 215, 253);
 }
 
-.dcm-s-mozilla .CodeMirror-selected { 
+.cm-s-mozilla .CodeMirror-selected { 
   background: rgb(176, 176, 176);
 }
 
 .CodeMirror-activeline-background { 
-  background: rgba(185, 215, 253, .05);
+  background: rgba(185, 215, 253, .15);
+}
+
+.cm-s-mozilla .CodeMirror-linenumber { 
+  color: #5f7387;
+}
+
+.cm-s-mozilla .CodeMirror-gutters { 
+  border-right-color: #343c45;
 }
 
 .cm-s-markup-view pre {
