--- a/browser/metro/theme/platform.css
+++ b/browser/metro/theme/platform.css
@@ -197,16 +197,6 @@ menulist {
   font-weight: 600;
 }
 
-.menu-popup richlistitem:not([disabled]):hover {
-  background-color: #ccc;
-  color: black;
-}
-
-.menu-popup richlistitem:not([disabled]):active {
-  background-color: black;
-  color: white;
-}
-
 .menu-popup > richlistbox > richlistitem {
   padding-right: 50px;
 }
@@ -249,16 +239,6 @@ menulist {
   font-weight: bold;
   font-style: italic;
   pointer-events: none;
-}
-
-.option-command:not([disabled]):hover {
-  background-color: #f0f0f0;
-  color: black;
-}
-
-.option-command:not([disabled]):active {
-  background-color: #d3d3d3;
-  color: black;
 }
 
 .select-popup > richlistbox > scrollbox {
@@ -404,13 +384,14 @@ richlistitem description.normal-bold {
   font-weight: bold;
 }
 
-richlistitem[selected] {
-  color: black;
-  background-color: white;
+richlistitem[selected],
+richlistitem:not([disabled]):not([selected]):active {
+  background-color: @metro_orange@;
+  color: #fff;
 }
 
-richlistitem:hover:active:not([selected]) {
-  background-color: #8db8d8;
+richlistitem:not([disabled]):not([selected]):hover {
+  background-color: #ccc;
 }
 
 richlistitem.section-header,
