--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -376,8 +376,8 @@ select:disabled:disabled
   cursor: inherit;
 }
 
-input:disabled > .anonymous-div,
-textarea:disabled > .anonymous-div {
+input:disabled,
+textarea:disabled {
   cursor: default;
 }
 
