--- a/browser/themes/shared/devtools/light-theme.css
+++ b/browser/themes/shared/devtools/light-theme.css
@@ -79,23 +79,21 @@
 }
 
 .theme-fg-color1,
-.cm-s-mozilla .cm-variable-2,
-.cm-s-mozilla .cm-quote { 
+.cm-s-mozilla .cm-number { 
   color: hsl(72,100%,27%);
 }
 
 .theme-fg-color2,
 .cm-s-mozilla .cm-attribute,
 .cm-s-mozilla .cm-builtin,
-.cm-s-mozilla .cm-variable,
 .cm-s-mozilla .cm-def,
-.cm-s-mozilla .cm-variable-3,
 .cm-s-mozilla .cm-property,
 .cm-s-mozilla .cm-qualifier { 
   color: hsl(208,56%,40%);
 }
 
 .theme-fg-color3,
+.cm-s-mozilla .cm-variable,
 .cm-s-mozilla .cm-tag,
 .cm-s-mozilla .cm-header { 
   color: hsl(208,81%,21%)
@@ -107,18 +105,19 @@
 
 .theme-fg-color5,
 .cm-s-mozilla .cm-bracket,
-.cm-s-mozilla .cm-keyword,
-.cm-s-mozilla .cm-atom { 
+.cm-s-mozilla .cm-keyword { 
   color: #a18650;
 }
 
 .theme-fg-color6,
-.cm-s-mozilla .cm-string { 
+.cm-s-mozilla .cm-string,
+.cm-s-mozilla .cm-string-2 { 
   color: hsl(24,85%,39%);
 }
 
 .theme-fg-color7,
-.cm-s-mozilla .cm-string-2,
+.cm-s-mozilla .cm-atom,
+.cm-s-mozilla .cm-quote,
 .cm-s-mozilla .cm-error { 
   color: #bf5656;
 }
@@ -144,9 +143,10 @@
 }
 
 .CodeMirror pre,
+.cm-s-mozilla .cm-variable-2,
+.cm-s-mozilla .cm-variable-3,
 .cm-s-mozilla .cm-operator,
-.cm-s-mozilla .cm-special,
-.cm-s-mozilla .cm-number { 
+.cm-s-mozilla .cm-special { 
   color: black;
 }
 
@@ -162,7 +162,7 @@
   background: rgb(176, 176, 176);
 }
 
-.CodeMirror-activeline-background { 
+.cm-s-mozilla .CodeMirror-activeline-background { 
   background: rgba(185, 215, 253, .35);
 }
 
