--- a/mobile/android/base/resources/layout/browser_toolbar.xml
+++ b/mobile/android/base/resources/layout/browser_toolbar.xml
@@ -7,10 +7,10 @@
        xmlns:gecko="http://schemas.android.com/apk/res-auto">
 
     <ImageButton android:id="@+id/back"
-                 style="@style/UrlBar.ImageButton.Back"/>
+                 style="@style/UrlBar.ImageButton.Unused"/>
 
     <ImageButton android:id="@+id/forward"
-                 style="@style/UrlBar.ImageButton.Forward"/>
+                 style="@style/UrlBar.ImageButton.Unused"/>
 
     <org.mozilla.gecko.BrowserToolbarBackground android:id="@+id/url_bar_bg"
                                                 android:layout_width="fill_parent"
