--- a/mobile/android/base/resources/layout/browser_toolbar.xml
+++ b/mobile/android/base/resources/layout/browser_toolbar.xml
@@ -98,7 +98,7 @@
                   android:visibility="gone"
                   android:orientation="horizontal">
 
-        <view class="org.mozilla.gecko.CustomEditText"
+        <org.mozilla.gecko.CustomEditText
               android:id="@+id/url_edit_text"
               style="@style/UrlBar.Button"
               android:layout_width="fill_parent"
