--- a/browser/devtools/sourceeditor/codemirror/mozilla.css
+++ b/browser/devtools/sourceeditor/codemirror/mozilla.css
@@ -38,3 +38,19 @@
 .error-line {
   background: rgba(255,0,0,0.2);
 }
+
+
+
+
+
+.CodeMirror-hscrollbar {
+  min-height: 10px;
+}
+
+
+
+
+
+.CodeMirror-vscrollbar {
+  min-width: 10px;
+}
